# imperial-robot-learning-rl

./: .gitignore  README.md  arm_control.py  detect_board_port.py  generate_video.py  pyproject.toml  so101_calibration.json  start_pose.json
hardware/python_controller/: adeept_comms.py  example.py  robot_interface.py
rl/: agent.py  train.py
src/: arm_control.py  detect_board_port.py
src/hardware/: calibrate.py  oscillation_test.py  record_pose.py  replay_pose.py  test_control.py
src/hardware/python_controller/: bus.py  dance.py  move_join.py  reset_positon.py  robot_interface.py  test_robot.py  wave.py
src/rl/: agent.py  lid_opening_env.py  train.py
src/vision/: Cube_circle_detector_withvideoinput_realsense.py  capture.py  detector_pink_blob_angleEstimation_camerastream.py  test_vision.py  vision.py  webcam_version_angle_calculation.py
vision/: calculate.py
